infrastructure/controllers/networking/gateway/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  namespace: gateway
spec:
  addresses:
  - type: IPAddress
    value: 192.168.86.130
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.hoytlabs.app"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.hoytlabs.app"
      tls:
        certificateRefs:
          - name: cert-hoytlabs-sf8wl
            kind: Secret
            group: "" # required
      allowedRoutes:
        namespaces:
          from: All
